# ElectrolyteML

./: .gitignore  README.md  analysis_prediction.py  battery.py  evaluator.py  hello.py  main.py  material.py  materials.json  model_run.py  models.py  pyproject.toml  test.py  transformer_best.pth  workflow.py
battery/: __init__.py  anode.py  cathode.py  electrolyte.py  models.py
data/: calisol23_DOI_10.11583DTU.c.6929599.csv
data/calisol23/: calisol23.csv  calisol23_DOI_10.11583DTU.c.6929599.csv  calisol23_all.csv  calisol23_fraction.csv  calisol23_fraction.json  calisol23_liAsF6.csv  calisol23_liAsF6.json  calisol23_libob.json  calisol23_libob_valid.csv  calisol23_litfsi.csv  calisol23_litfsi.json  calisol23_processed_valid.csv  calisol23_tem.csv  calisol23_tem.json  calisol23_valid.csv
database/: LITHIUMSALT.py  SOLVENT.py
dataset/: __init__.py
elml/: __init__.py  materials.json  run.py
elml/battery/: __init__.py  anode.py  battery.py  cathode.py  electrolyte.py  models.py
elml/config/: __init__.py
elml/dataset/: __init__.py  electrolyte_dataset.py
elml/material/: __init__.py  library.py  material.py  models.py
elml/ml/: __init__.py  analysis.py  evaluator.py  models.py  predictor.py  train.py  trainer.py  workflow.py
elml/utils/: __init__.py
examples/: ratio_scan.py  temperture_scan.py  workflow_examples.py
material/: __init__.py  models.py
ml/: __init__.py  ml_model.py  models.py
tools/: calisol23.py  pearson_correlation_analysis.py  test_temperature_normalization.py  train_model.py
