[project]
name = "electrolyteml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rdkit>=2024.9.5",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "psutil>=7.0.0",
]
