[project]
name = "electrolyteml"
version = "1.0.0"
description = "Machine Learning for Electrolyte Systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rdkit>=2024.9.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "psutil>=7.0.0",
]
